--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
     "name": "my-app",
+    "type": "module",
     "version": "0.1.0",
     "private": true,
+    "engines": {
+        "node": "22.2.0"
+    },
     "scripts": {
         "dev": "next dev",
         "build": "next build",
@@ -9,23 +13,23 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "antd": "^5.18.2",
+        "antd": "^5.18.3",
         "axios": "^1.7.2",
         "next": "14.2.4",
-        "react": "^18",
-        "react-dom": "^18"
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     },
     "devDependencies": {
-        "@tanstack/react-query": "^5.45.1",
-        "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
-        "eslint": "^8",
+        "@tanstack/react-query": "^5.48.0",
+        "@types/node": "^20.14.9",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "eslint": "^8.57.0",
         "eslint-config-next": "14.2.4",
-        "postcss": "^8",
+        "postcss": "^8.4.38",
         "prettier": "3.3.2",
         "react-redux": "^9.1.2",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5"
+        "tailwindcss": "^3.4.4",
+        "typescript": "^5.5.2"
     }
 }
